<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginbackground" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/loginbackground2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="347dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineImageBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineImageTop"
        app:srcCompat="@drawable/login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Selamat_Datang_di_FoodLergic"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineImageBottom"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="15sp"
        android:paddingHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
        android:backgroundTint="@color/color_button"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun_RegisterNow"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/tvRegisterNow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="100"
        android:text="@string/RegisterNow"
        android:textColor="@color/custom_color_secondary_light"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvRegister"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>